[gd_scene load_steps=6 format=2]

[ext_resource path="res://Assets/Fonts/kenvector_future.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://GUIs/ColorMenu.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 36
font_data = ExtResource( 1 )

[sub_resource type="Theme" id=2]
default_font = SubResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 52
outline_size = 2
outline_color = Color( 1, 0, 0, 1 )
font_data = ExtResource( 1 )

[node name="ColorMenu" type="Popup"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = SubResource( 2 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.0509804, 0.0509804, 0.0509804, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 20.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="VBoxContainer"]
margin_right = 1024.0
margin_bottom = 59.0
custom_fonts/font = SubResource( 3 )
text = "Edit Vehicle Colors"
align = 1

[node name="CenterContainer" type="CenterContainer" parent="VBoxContainer"]
margin_top = 63.0
margin_right = 1024.0
margin_bottom = 365.0

[node name="GridContainer" type="GridContainer" parent="VBoxContainer/CenterContainer"]
margin_left = 160.0
margin_right = 864.0
margin_bottom = 302.0
columns = 2

[node name="BodyColLabel" type="Label" parent="VBoxContainer/CenterContainer/GridContainer"]
margin_top = 3.0
margin_right = 450.0
margin_bottom = 44.0
text = "Car Body Color:"
align = 2

[node name="BodyColor" type="ColorPickerButton" parent="VBoxContainer/CenterContainer/GridContainer"]
margin_left = 454.0
margin_right = 704.0
margin_bottom = 47.0
rect_min_size = Vector2( 250, 0 )

[node name="WindowColLabel" type="Label" parent="VBoxContainer/CenterContainer/GridContainer"]
margin_top = 54.0
margin_right = 450.0
margin_bottom = 95.0
text = "Window Color:"
align = 2

[node name="WindowColor" type="ColorPickerButton" parent="VBoxContainer/CenterContainer/GridContainer"]
margin_left = 454.0
margin_top = 51.0
margin_right = 704.0
margin_bottom = 98.0

[node name="BonnetColLabel" type="Label" parent="VBoxContainer/CenterContainer/GridContainer"]
margin_top = 105.0
margin_right = 450.0
margin_bottom = 146.0
text = "Car Bonnet Color:"
align = 2

[node name="BonnetColor" type="ColorPickerButton" parent="VBoxContainer/CenterContainer/GridContainer"]
margin_left = 454.0
margin_top = 102.0
margin_right = 704.0
margin_bottom = 149.0

[node name="BootColLabel" type="Label" parent="VBoxContainer/CenterContainer/GridContainer"]
margin_top = 156.0
margin_right = 450.0
margin_bottom = 197.0
text = "Car Boot Color:"
align = 2

[node name="BootColor" type="ColorPickerButton" parent="VBoxContainer/CenterContainer/GridContainer"]
margin_left = 454.0
margin_top = 153.0
margin_right = 704.0
margin_bottom = 200.0

[node name="WheelColLabel" type="Label" parent="VBoxContainer/CenterContainer/GridContainer"]
margin_top = 207.0
margin_right = 450.0
margin_bottom = 248.0
text = "Car Wheel Color:"
align = 2

[node name="WheelColor" type="ColorPickerButton" parent="VBoxContainer/CenterContainer/GridContainer"]
margin_left = 454.0
margin_top = 204.0
margin_right = 704.0
margin_bottom = 251.0

[node name="TrimColLabel" type="Label" parent="VBoxContainer/CenterContainer/GridContainer"]
margin_top = 258.0
margin_right = 450.0
margin_bottom = 299.0
text = "Car Trim Color:"
align = 2

[node name="TrimColor" type="ColorPickerButton" parent="VBoxContainer/CenterContainer/GridContainer"]
margin_left = 454.0
margin_top = 255.0
margin_right = 704.0
margin_bottom = 302.0

[node name="CenterContainer2" type="CenterContainer" parent="VBoxContainer"]
margin_top = 369.0
margin_right = 1024.0
margin_bottom = 467.0

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/CenterContainer2"]
margin_left = 310.0
margin_right = 714.0
margin_bottom = 98.0

[node name="DefaultButton" type="Button" parent="VBoxContainer/CenterContainer2/VBoxContainer"]
margin_right = 404.0
margin_bottom = 47.0
text = "Default"

[node name="GridContainer" type="GridContainer" parent="VBoxContainer/CenterContainer2/VBoxContainer"]
margin_top = 51.0
margin_right = 404.0
margin_bottom = 98.0
rect_min_size = Vector2( 200, 0 )
columns = 2

[node name="CancelButton" type="Button" parent="VBoxContainer/CenterContainer2/VBoxContainer/GridContainer"]
margin_right = 200.0
margin_bottom = 47.0
rect_min_size = Vector2( 200, 0 )
text = "Cancel"

[node name="SaveButton" type="Button" parent="VBoxContainer/CenterContainer2/VBoxContainer/GridContainer"]
margin_left = 204.0
margin_right = 404.0
margin_bottom = 47.0
rect_min_size = Vector2( 200, 0 )
text = "Save"

[connection signal="color_changed" from="VBoxContainer/CenterContainer/GridContainer/BodyColor" to="." method="_on_BodyColor_color_changed"]
[connection signal="color_changed" from="VBoxContainer/CenterContainer/GridContainer/WindowColor" to="." method="_on_WindowColor_color_changed"]
[connection signal="color_changed" from="VBoxContainer/CenterContainer/GridContainer/BonnetColor" to="." method="_on_BonnetColor_color_changed"]
[connection signal="color_changed" from="VBoxContainer/CenterContainer/GridContainer/BootColor" to="." method="_on_BootColor_color_changed"]
[connection signal="color_changed" from="VBoxContainer/CenterContainer/GridContainer/WheelColor" to="." method="_on_WheelColor_color_changed"]
[connection signal="color_changed" from="VBoxContainer/CenterContainer/GridContainer/TrimColor" to="." method="_on_TrimColor_color_changed"]
[connection signal="pressed" from="VBoxContainer/CenterContainer2/VBoxContainer/DefaultButton" to="." method="_on_DefaultButton_pressed"]
[connection signal="pressed" from="VBoxContainer/CenterContainer2/VBoxContainer/GridContainer/CancelButton" to="." method="_on_CancelButton_pressed"]
[connection signal="pressed" from="VBoxContainer/CenterContainer2/VBoxContainer/GridContainer/SaveButton" to="." method="_on_SaveButton_pressed"]
